--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -1,87 +1,88 @@
-version: "3.8"  # Note: 'version' is deprecated but included for compatibility
-
+version: "3.8"
 services:
-  taccso-api:
-    image: ghcr.io/ayushkmr/taccso/taccso:1.1.7  # Your custom TAccSo API image
-    container_name: TAccSo-API  # Renamed container
+  api:
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile.multi
+    #   target: api-build
+    image: ghcr.io/danny-avila/librechat-dev-api:latest
+    container_name: LibreChat-API
     ports:
-      - "3080:3080"
+      - 3080:3080
     depends_on:
-      - taccso-mongodb
-      - taccso-rag-api
+      - mongodb
+      - rag_api
     restart: always
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+    - "host.docker.internal:host-gateway"
     env_file:
       - .env
     environment:
       - HOST=0.0.0.0
       - NODE_ENV=production
-      - MONGO_URI=mongodb://taccso-mongodb:27017/TAccSo  # Updated database name and host
-      - MEILI_HOST=http://taccso-meilisearch:7700  # Updated host
+      - MONGO_URI=mongodb://mongodb:27017/LibreChat
+      - MEILI_HOST=http://meilisearch:7700
       - RAG_PORT=${RAG_PORT:-8000}
-      - RAG_API_URL=http://taccso-rag-api:${RAG_PORT:-8000}
+      - RAG_API_URL=http://rag_api:${RAG_PORT:-8000}
     volumes:
       - type: bind
-        source: ./taccso.yaml  # Updated configuration file
-        target: /app/librechat.yaml  # Application expects this path
+        source: ./librechat.yaml
+        target: /app/librechat.yaml
       - ./images:/app/client/public/images
       - ./logs:/app/api/logs
 
-  taccso-mongodb:
+  client:
+    image: nginx:1.27.0-alpine
+    container_name: LibreChat-NGINX
+    ports:
+      - 80:80
+      - 443:443
+    depends_on:
+      - api
+    restart: always
+    volumes:
+      - ./client/nginx.conf:/etc/nginx/conf.d/default.conf
+  mongodb:
+    container_name: chat-mongodb
+    # ports:  # Uncomment this to access mongodb from outside docker, not safe in deployment
+    #   - 27018:27017
     image: mongo
-    container_name: taccso-mongodb  # Renamed container
     restart: always
     volumes:
       - ./data-node:/data/db
     command: mongod --noauth
-
-  taccso-meilisearch:
+  meilisearch:
+    container_name: chat-meilisearch
     image: getmeili/meilisearch:v1.7.3
-    container_name: TAccSo-MeiliSearch  # Renamed container
     restart: always
+    # ports: # Uncomment this to access meilisearch from outside docker
+    #   - 7700:7700 # if exposing these ports, make sure your master key is not the default value
     env_file:
       - .env
     environment:
-      - MEILI_HOST=http://taccso-meilisearch:7700  # Updated host
+      - MEILI_HOST=http://meilisearch:7700
       - MEILI_NO_ANALYTICS=true
     volumes:
       - ./meili_data_v1.7:/meili_data
-
-  taccso-vectordb:
+  vectordb:
     image: ankane/pgvector:latest
-    container_name: taccso-vectordb  # Renamed container
     environment:
-      - POSTGRES_DB=taccsodb  # Updated database name
-      - POSTGRES_USER=taccsouser
-      - POSTGRES_PASSWORD=your_secure_password  # Ensure this is secure
+      POSTGRES_DB: mydatabase
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
     restart: always
     volumes:
       - pgdata2:/var/lib/postgresql/data
-
-  taccso-rag-api:
-    image: ghcr.io/ayushkmr/taccso/taccso-rag-api:1.1.7  # Your custom RAG API image
-    container_name: TAccSo-RAG-API  # Renamed container
+  rag_api:
+    image: ghcr.io/danny-avila/librechat-rag-api-dev-lite:latest
     environment:
-      - DB_HOST=taccso-vectordb
+      - DB_HOST=vectordb
       - RAG_PORT=${RAG_PORT:-8000}
     restart: always
     depends_on:
-      - taccso-vectordb
+      - vectordb
     env_file:
       - .env
-
-  taccso-nginx:
-    image: nginx:1.27.0-alpine
-    container_name: TAccSo-NGINX  # Renamed container
-    ports:
-      - "80:80"
-      - "443:443"
-    depends_on:
-      - taccso-api
-    restart: always
-    volumes:
-      - ./client/nginx.conf:/etc/nginx/conf.d/default.conf
 
 volumes:
   pgdata2:
