--- a/client/package.json
+++ b/client/package.json
@@ -67,7 +67,7 @@
     "html-to-image": "^1.11.11",
     "image-blob-reduce": "^4.1.0",
     "js-cookie": "^3.0.5",
-    "librechat-data-provider": "*",
+    "librechat-data-provider": "^0.7.54",
     "lodash": "^4.17.21",
     "lucide-react": "^0.394.0",
     "match-sorter": "^6.3.4",
