--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@librechat/frontend",
-  "version": "v0.7.5",
+  "name": "@taccso/frontend",
+  "version": "v0.0.1",
   "description": "",
   "type": "module",
   "scripts": {
@@ -18,15 +18,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danny-avila/LibreChat.git"
+    "url": "git+https://github.com/ayushkmr/TAccSo.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/danny-avila/LibreChat/issues"
-  },
-  "homepage": "https://librechat.ai",
+  "homepage": "https://taccso.com",
   "dependencies": {
     "@ariakit/react": "^0.4.11",
     "@codesandbox/sandpack-react": "^2.18.2",
