--- a/packages/data-provider/package.json
+++ b/packages/data-provider/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "librechat-data-provider",
+  "name": "taccso-data-provider",
   "version": "0.7.55",
-  "description": "data services for librechat apps",
+  "description": "data services for taccso apps",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "./dist/types/index.d.ts",
@@ -30,14 +30,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danny-avila/LibreChat.git"
+    "url": "git+https://github.com/ayushkmr/TAccSo.git"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/danny-avila/LibreChat/issues"
-  },
-  "homepage": "https://librechat.ai",
+  "homepage": "https://taccso.com",
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
     "axios": "^1.7.7",
