--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TAccSo",
-  "version": "v0.0.1",
+  "name": "LibreChat",
+  "version": "v0.7.6",
   "description": "",
   "workspaces": [
     "api",
@@ -69,9 +69,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ayushkmr/TAccSo.git"
+    "url": "git+https://github.com/danny-avila/LibreChat.git"
   },
-  "homepage": "https://taccso.com/",
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/danny-avila/LibreChat/issues"
+  },
+  "homepage": "https://librechat.ai/",
   "devDependencies": {
     "@axe-core/playwright": "^4.9.1",
     "@playwright/test": "^1.38.1",
@@ -113,5 +118,8 @@
       "admin/",
       "packages/"
     ]
+  },
+  "dependencies": {
+    "librechat-data-provider": "^0.7.691"
   }
 }
