--- a/packages/data-provider/package.json
+++ b/packages/data-provider/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "taccso-data-provider",
-  "version": "0.7.55",
-  "description": "data services for taccso apps",
+  "name": "librechat-data-provider",
+  "version": "0.7.691",
+  "description": "data services for librechat apps",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "./dist/types/index.d.ts",
@@ -30,12 +30,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ayushkmr/TAccSo.git"
+    "url": "git+https://github.com/danny-avila/LibreChat.git"
   },
-  "homepage": "https://taccso.com",
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/danny-avila/LibreChat/issues"
+  },
+  "homepage": "https://librechat.ai",
   "dependencies": {
     "axios": "^1.7.7",
     "js-yaml": "^4.1.0",
+    "librechat-data-provider": "^0.7.691",
     "zod": "^3.22.4"
   },
   "devDependencies": {
