--- a/taccso.yaml
+++ b/taccso.yaml
@@ -32,17 +32,19 @@ endpoints:
       - group: 'taccsoassistant'
         apiKey: '${AZURE_OPENAI_API_KEY}'
         instanceName: 'taccsoassistant'
-        version: '2024-08-01-preview'
+        version: '2024-12-01-preview'
         models:
           o1-mini:
             deploymentName: 'o1-mini'
           gpt-4o-mini:
             deploymentName: 'gpt-4o-mini'
+          o1:
+            deploymentName: 'o1'
       # Group-level configuration for 'ayush-eastus' using o1 models
       - group: 'ayush-eastus'
         apiKey: '${AZURE_OPENAI_API_KEY_EASTUS}'
         instanceName: 'ayush-m3623o5g-eastus'
-        version: '2024-08-01-preview'
+        version: '2024-12-01-preview'
         models:
           o1-preview:
             deploymentName: 'o1-preview'
@@ -137,14 +139,14 @@ modelSpecs:
           No Assumptions: Do not make assumptions about the user's knowledge level; tailor explanations to be informative but respectful of their expertise.
           Reminder: Always include dates and sources when citing tax acts or legal references to enhance credibility. Do not mention information you are unsure about, as accuracy is crucial in legal, tax, and accounting matters.
 
-    - name: "tax-o1-preview"
+    - name: "tax-o1"
       label: "TAccSo Assistant Advanced"
       description: "Longer response time, comprehensive reasoning & in-depth analysis."
       iconURL: "https://raw.githubusercontent.com/ayushkmr/TAccSo/main/client/public/assets/taccso.jpg"
       preset:
         default: false
         endpoint: "azureOpenAI"
-        model: "o1-preview"
+        model: "o1"
         modelLabel: "TAccSo"
         greeting: |
           Welcome to TAccSo Tax Assistant Preview! How can I assist you with your tax and accounting queries today?
@@ -308,7 +310,7 @@ modelSpecs:
       preset:
         default: true
         endpoint: "azureOpenAI"
-        model: "o1-mini"
+        model: "o1"
         modelLabel: "AdviceHub"
         greeting: |
           Welcome to the Advice Hub! How can I assist you with expert advice on your topics today?
