--- a/taccso.yaml
+++ b/taccso.yaml
@@ -36,6 +36,8 @@ endpoints:
         models:
           o1-mini:
             deploymentName: 'o1-mini'
+          o3-mini:
+            deploymentName: 'o3-mini'
           gpt-4o-mini:
             deploymentName: 'gpt-4o-mini'
           o1:
@@ -76,14 +78,14 @@ modelSpecs:
   enforce: true
   prioritize: true
   list:
-    - name: "tax-o1-mini"
+    - name: "tax-o3-mini"
       label: "TAccSo Assistant"
       description: "Swift, detailed, efficient responses"
       iconURL: "https://raw.githubusercontent.com/ayushkmr/TAccSo/main/client/public/assets/taccso.jpg"
       preset:
         default: true
         endpoint: "azureOpenAI"
-        model: "o1-mini"
+        model: "o3-mini"
         modelLabel: "TAccSo"
         greeting: |
           Welcome to TAccSo Assistant! How can I assist you with your tax and accounting queries today?
@@ -373,7 +375,7 @@ modelSpecs:
       preset:
         default: true
         endpoint: "azureOpenAI"
-        model: "o1-mini"
+        model: "o3-mini"
         modelLabel: "AdviceHub"
         greeting: |
           Welcome to the Advice Hub! How can I assist you with expert advice on your topics today?
